# chains

./: .eslintrc.json  .gitignore  .jshintrc  .pre-commit-config.yaml  composer.json  composer.lock.bak  package-lock.json  package.json  phpcs.xml  webpack.config.js
app/: Chain.php  ChainCompletion.php  ChainFrequency.php  User.php
app/Exceptions/: Handler.php
app/Helper/: Email.php  email.php
app/Providers/: RouteServiceProvider.php
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5fd246bfab65_.py  8786e65f1083_.py  90111994fe73_.py  cf82d43afd0e_.py
backend/app/: main.py  routes.py
backend/app/auth/: auth_exception.py  models.py  routes.py  service.py
backend/app/auth/providers/: google.py  provider_factory.py  provider_interface.py
backend/app/core/: app_exception.py  authentication.py  database_manager.py  lifespan.py  logging.py  repository.py
backend/app/core/config/: config.py  development_settings.py  settings.py
backend/app/core/middleware/: logging_middleware.py  register_middleware.py  request_id_middleware.py
backend/app/scripts/: __init__.py  main.py
backend/app/scripts/database/: __init__.py  backup_db.py
backend/app/user/: models.py  repository.py  routes.py  service.py
backend/src/: main.py
config/: database.php
database/migrations/: 2014_10_12_100000_create_password_resets_table.php  2018_08_14_125541_create_chain_table.php  (+10 more)
frontend/: .prettierrc.json  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
routes/: api.php  console.php
(+152 files in other folders)
