[project]
name = "chains-zz50-co-uk"
version = "0.1.0"
description = "chains motivation tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "fastapi-utils>=0.8.0",
    "google-api-python-client>=2.196.0",
    "google-auth-oauthlib>=1.4.0",
    "httpx>=0.28.1",
    "psycopg>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.38",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.47.0",
]
